--- a/mods/my-hero-academia.pw.toml
+++ b/mods/my-hero-academia.pw.toml
@@ -1,13 +1,13 @@
 name = "My Hero Academia"
-filename = "My Hero Academia - 1.16.5 - 1.0.6.jar"
+filename = "My Server Academia - 1.16.5 - 1.0.5.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "bdaf440794c104c14aef3da2d89e0208c4a6d84a"
+hash = "226aa5a9f597045cf75338c0bf77f2bfb5651631"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3479475
+file-id = 3469859
 project-id = 361529
