--- a/mods/project-red-integration.pw.toml
+++ b/mods/project-red-integration.pw.toml
@@ -1,13 +1,13 @@
 name = "Project Red - Integration"
-filename = "ProjectRed-1.16.5-4.14.0-beta-30-integration.jar"
+filename = "ProjectRed-1.16.5-4.15.0-integration.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "cbe686c341a3bf7040ce91c264338259ac1d32fe"
+hash = "7fb5749d453ac0936dff68928dd68c63cb7326aa"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4560946
+file-id = 4607543
 project-id = 229045
