--- a/mods/project-red-transmission.pw.toml
+++ b/mods/project-red-transmission.pw.toml
@@ -1,13 +1,13 @@
 name = "Project Red - Transmission"
-filename = "ProjectRed-1.16.5-4.14.0-beta-30-transmission.jar"
+filename = "ProjectRed-1.16.5-4.15.0-transmission.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "361bcdb44b95f011cd60a24a2f9ea50d92c00c36"
+hash = "3f142c540aa64d0f4d430535c1e0c11d667cb144"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4560947
+file-id = 4607544
 project-id = 478939
