--- a/mods/lootr.pw.toml
+++ b/mods/lootr.pw.toml
@@ -1,13 +1,13 @@
-name = "Lootr (Forge)"
-filename = "lootr-1.16.5-0.2.18.49.jar"
+name = "Lootr (Forge & NeoForge)"
+filename = "lootr-1.16.5-0.2.19.50.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "013933c93ab7e3db2aefb62928855483e7e73a1a"
+hash = "cfb5c0913656f32e313a8b523bcc1231e47ae157"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4596216
+file-id = 5179276
 project-id = 361276
