--- a/mods/u-team-core.pw.toml
+++ b/mods/u-team-core.pw.toml
@@ -1,13 +1,13 @@
 name = "U Team Core"
-filename = "u_team_core-1.16.5-3.2.1.258.jar"
+filename = "u_team_core-forge-1.16.5-3.2.1.285.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "e7c71842fc008502feabe70c1d62ddf749335228"
+hash = "44bd37fefcbdd951df25a868a931eaef89ac3d83"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4583205
+file-id = 5220169
 project-id = 273744
